Bug 742581: Make definition of nsStyleCoord::GetCoordValue() consistent with the declaration, regarding what the function's return type is. r=dbaron